force-app/main/default/objects/Apheresis_Collection__c/Apheresis_Collection__c.object-meta.xml
<CustomObject>
    <label>Apheresis Collection</label>
    <nameField>
        <displayFormat>CLN-{000000}</displayFormat>
        <label>Collection Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Apheresis Collections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>