force-app/main/default/objects/Apheresis_Collection__c/fields/Collection_End_Time__c.field-meta.xml
<CustomField>
    <fullName>Collection_End_Time__c</fullName>
    <label>Collection End Time</label>
    <type>DateTime</type>
</CustomField>