force-app/main/default/objects/Apheresis_Collection__c/fields/Collection_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Collection_Start_Time__c</fullName>
    <label>Collection Start Time</label>
    <type>DateTime</type>
</CustomField>