force-app/main/default/objects/Apheresis_Collection__c/fields/Collection_Volume__c.field-meta.xml
<CustomField>
    <fullName>Collection_Volume__c</fullName>
    <label>Collection Volume</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>