force-app/main/default/objects/Apheresis_Collection__c/fields/Donor_Identification_Number__c.field-meta.xml
<CustomField>
    <fullName>Donor_Identification_Number__c</fullName>
    <label>Donor Identification Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>